# toy_interpreter

./: .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  readme.md
cmake/: NoInSourceBuilds.cmake  SetDefaultBuildTypeRelease.cmake
doc/: doc.md
script/: build.sh
src/: CMakeLists.txt
src/void/: CMakeLists.txt  ast.cpp  builtin.cpp  evaluator.cpp  lexer.cpp  object.cpp  parser.cpp  token.cpp
src/void/include/void/: ast.hpp  builtin.hpp  evaluator.hpp  lexer.hpp  object.hpp  parser.hpp  token.hpp
src/void_cli/: CMakeLists.txt  repl.cpp
test/: CMakeLists.txt  evaluator_test.cpp  lexer_test.cpp  parser_test.cpp  token_test.cpp
